--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     ],
     "scripts": {
       "dev": "vercel dev",
-      "build": "npm run build:backend && npm run build:frontend",
-      "build:frontend": "cd frontend && npm install && npm run build",
+      "build": "cd frontend && npm install && CI=false npm run build",
       "build:backend": "cd backend && npm install",
       "start:frontend": "cd frontend && npm start",
-      "start:backend": "cd backend && npm start",
-      "deploy": "vercel deploy --prod"
+      "start:backend": "cd backend && npm start"
     },
     "devDependencies": {
       "vercel": "latest"
