Fix build issues for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
         "src": "frontend/package.json",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "build"
+          "distDir": "build",
+          "buildCommand": "CI=false npm run build"
         }
       }
     ],
@@ -25,5 +26,8 @@
         "src": "/(.*)",
         "dest": "frontend/build/index.html"
       }
-    ]
+    ],
+    "env": {
+      "CI": "false"
+    }
   }
