--- a/vercel.json
+++ b/vercel.json
@@ -1,33 +1,9 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "backend/server.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "frontend/package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "build",
-          "buildCommand": "CI=false npm run build"
-        }
-      }
-    ],
+    "outputDirectory": "frontend/build",
+    "buildCommand": "cd frontend && CI=false npm run build",
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "backend/server.js"
-      },
-      {
-        "handle": "filesystem"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "frontend/build/index.html"
-      }
-    ],
-    "env": {
-      "CI": "false"
-    }
+      { "handle": "filesystem" },
+      { "src": "/(.*)", "dest": "/index.html" }
+    ]
   }
