--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
     "version": "1.0.0",
     "private": true,
     "workspaces": [
-      "frontend",
-      "backend"
+        "frontend",
+        "backend"
     ],
     "scripts": {
-      "dev": "vercel dev",
-      "build": "cd frontend && npm install && CI=false npm run build",
-      "build:backend": "cd backend && npm install",
-      "start:frontend": "cd frontend && npm start",
-      "start:backend": "cd backend && npm start"
+        "dev:frontend": "cd frontend && npm run start",
+        "dev:backend": "cd backend && npm run dev",
+        "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+        "build:frontend": "cd frontend && npm run build",
+        "build:backend": "cd backend && npm run build",
+        "build": "npm run build:frontend && npm run build:backend",
+        "install:all": "npm install && npm run install:frontend && npm run install:backend",
+        "install:frontend": "cd frontend && npm install",
+        "install:backend": "cd backend && npm install"
     },
     "devDependencies": {
-      "vercel": "latest"
+        "concurrently": "^8.2.2"
     }
-  }
+}
