--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,20 @@
 {
     "version": 2,
-    "buildCommand": "cd frontend && CI=false npm run build",
+    "buildCommand": "npm run build",
     "outputDirectory": "frontend/build",
-    "builds": [
-      { "src": "api/index.js", "use": "@vercel/node" }
+    "rewrites": [
+      {
+        "source": "/api/(.*)",
+        "destination": "/api/$1"
+      },
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
     ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "/api/index.js" },
-      { "handle": "filesystem" },
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
+    "functions": {
+      "api/**/*.js": {
+        "runtime": "nodejs18.x"
+      }
+    }
   }
