--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,8 @@
 {
     "version": 2,
     "buildCommand": "npm run build",
-    "outputDirectory": "frontend/build",
+    "outputDirectory": "build",
     "rewrites": [
-      {
-        "source": "/api/(.*)",
-        "destination": "/api/$1"
-      },
       {
         "source": "/(.*)",
         "destination": "/index.html"
